Revision history for Graphics-Primitive

0.33
  - Driver: Don't mark things prepared, that's Layout::Manager's job
  - TextBox: simplify logic and return from prepare immediately after super if
    there is no text

0.32
  - Fix POD typo (thanks Brian Cassidy)
  - TextBox: Don't resize during prepare unless it's new minimums are bigger
  - Fix TextLayout's POD (thanks Brian Cassidy)
  - Driver: add _draw_bezier to requires (thanks Budrica Petre Cosmin)

0.31
  - Fix POD typo (thanks Brian Cassidy)
  - Driver: Add _draw_circle and _draw_ellipse
  - Bump Deps
  - Revamp text handling, see Driver::TextLayout

0.30
  - Bump Forest dependency to 0.4 to ease Win32 problems

0.29
  - MooseX::Storage support
  - Rename pack to finalize

0.28
  - Require _draw_polygon method for Driver role

0.27
  - Fill: Make paint a required attribute
  - Operations: Make Fill and Stroke clone properly

0.26
  - Add Image component (experimental)
  - POD fixes
  - Component: make parent a weakref

0.25
  - TextBox: Normalize multi-line rendering on line height

0.24
  - TextBox: Fix broken multi-line rendering

0.23
  - Component: Add parent attribute
  - Container: Set and unset parent attribute on add/remove/clear
  - Add Aligned role
  - Textbox: Use Aligned role
  - POD updates

0.22
  - Properly append component lists in find.

0.21
  - Remove duplicate code in Driver's prepare method

0.20
  - Fix accidentally marking containers as prepared when they are not

0.19
  - Component: Add class attribute
  - ComponentList: Add each and find

0.18
  - Add ComponentList and use it to keep container components.
  - Container: find_component now returns the component's index, not the
    component.

0.17
  - Useless whitespace changes
  - POD typos fixed
  - Border: switch from a single width to per-side Brushes
  - Brush: add derive, equal_to and not_equal_to
  - Border: now cloneable
  - Border: add homogeneous, equal_to and not_equal_to
  - Insets: ad as_array

0.16
  - Opps, I forgot. :(